--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
     </head>
     <body>
-
+        <!--Desginate the app by adding ng-app=""-->
+        <div ng-app="">
+            <p>Name : <input type="text" ng-model="name"></p>
+            <h1>Hello {{name}}</h1>
+        </div>
     </body>
 </html>
