--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <!--Desginate the app by adding ng-app=""-->
         <div ng-app="">
+            <!--Get input from the user to use later-->
             <p>Name : <input type="text" ng-model="name"></p>
+            <!--Update the page without even refreshing by useing angular to fill in the data!-->
             <h1>Hello {{name}}</h1>
         </div>
     </body>
