More comments for the math section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <!--Desginate the app by adding ng-app="" it also initializes the Angular App-->
-        <div ng-app="demoApp">
+        <!--Leave empty unless you have a controller and directive files set up-->
+        <div ng-app="">
             <!--Get input from the user to use later-->
             <h2>Name : <input type="text" ng-model="name"></h2>
             <!--Update the page without even refreshing by useing angular to fill in the data!-->
