--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <!--Get input from the user to use later-->
             <h2>Name : <input type="text" ng-model="name"></h2>
             <!--Update the page without even refreshing by useing angular to fill in the data!-->
-            <h2>Hello {{name}}</h1>
+            <p>Hello {{name}}</p>
 
             <h3>Lets do some math!</h3>
             <!--Create a directive to bind the input from the user. Kind of like setting a variable name-->
