--- a/inClassExampleComplete.html
+++ b/inClassExampleComplete.html
@@ -1,3 +1,8 @@
+<!--
+Example taken from W3Schools
+https://www.w3schools.com/angular/angular_application.asp
+-->
+
 <!DOCTYPE html>
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
