--- a/inClassExampleFollowAlong.html
+++ b/inClassExampleFollowAlong.html
@@ -13,14 +13,23 @@ https://www.w3schools.com/angular/angular_application.asp
 var app = angular.module("myShoppingList", []); 
 app.controller("myCtrl", function($scope) {
     $scope.products = ["Milk", "Bread", "Cheese"];
-//    Step 1.b
-    //Adding Items in script
+    /* 
+      STEP 1.A
+      Write the function to add an item 
+    */
+
 //    $scope.addItem = function () {
+          /* Add a check in case the box is empty! */
+
+          /* Add an item to the list! */
 //        $scope.products.push($scope.addMe);
 //    }    
     
-    //Step 2.b
-    //Removing Items in script
+    /*
+      STEP 1.B
+      Write the function to remove an item
+    */
+
 //    $scope.removeItem = function (x) {
 //        $scope.products.splice(x, 1);
 //    }
